--- a/www/index.html
+++ b/www/index.html
@@ -26,7 +26,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <script src="scordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -35,7 +35,7 @@
 
     <!-- services -->
     <script src="js/services/data.service.js"></script>
-    <script src="js/services/admob.services.js"></script>
+    <script src="js/services/aadmob.services.js"></script>
 
     <!-- Directives -->
 
