--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,7 @@
     <script src="js/app.js"></script>
     <script src="templates/templates.js"></script>
     <script src="js/config.js"></script>
-
+    <script src="js/gcm.js"></script>
     <!-- services -->
     <script src="js/services/data.service.js"></script>
     <script src="js/services/aadmob.services.js"></script>
@@ -69,6 +69,7 @@
     <script src="js/factory/cart.factory.js"></script>
     <!-- Filters -->
     <script src="js/filters/dish.filter.js"></script>
+
 
   </head>
 
