--- a/www/index.html
+++ b/www/index.html
@@ -75,5 +75,6 @@
 
   <body ng-app="restaurant" class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
+    <button class="button button-block button-stable" ng-click="app.register()">Register App</button>
   </body>
 </html>
