--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,8 @@
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
 
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
+    <script src="lib/cordova-airbop-client/airbop-client.min.js"></script>
+    <script src="lib/tiny-sha256/sha256.min.js"></script>
 
 
     <!-- cordova script (this will be a 404 during development) -->
