--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="">
     <title>Restaurant App</title>
 
 
@@ -22,8 +22,6 @@
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
 
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
-    <script src="lib/cordova-airbop-client/airbop-client.min.js"></script>
-    <script src="lib/tiny-sha256/sha256.min.js"></script>
 
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -34,7 +32,7 @@
     <script src="js/app.js"></script>
     <script src="templates/templates.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/gcm.js"></script>
+
     <!-- services -->
     <script src="js/services/data.service.js"></script>
     <script src="js/services/aadmob.services.js"></script>
@@ -72,11 +70,9 @@
     <!-- Filters -->
     <script src="js/filters/dish.filter.js"></script>
 
-
   </head>
 
   <body ng-app="restaurant" class="platform-android platform-cordova platform-webview">
     <ion-nav-view></ion-nav-view>
-    <button class="button button-block button-stable" ng-click="app.register()">Register App</button>
   </body>
 </html>
