--- a/www/index.html
+++ b/www/index.html
@@ -23,19 +23,22 @@
 
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
 
+    <script src="lib/cordova-airbop-client/airbop-client.min.js"></script>
+    <script src="lib/tiny-sha256/sha256.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <script src="scordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="templates/templates.js"></script>
+    <script src="js/gcm.js"></script>
+    <!--script src="templates/templates.js"></script-->
     <script src="js/config.js"></script>
 
     <!-- services -->
     <script src="js/services/data.service.js"></script>
-    <script src="js/services/aadmob.services.js"></script>
+    <!--script src="js/services/aadmob.services.js"></script-->
 
     <!-- Directives -->
 
@@ -65,7 +68,7 @@
     <script src="js/controllers/package.controller.js"></script>
     <script src="js/controllers/walkthrough.controller.js"></script>
     <script src="js/controllers/ad.controller.js"></script>
-    <script src="js/controllers/barcode.controller.js"></script>
+    <!--script src="js/controllers/barcode.controller.js"></script-->
     <script src="js/factory/cart.factory.js"></script>
     <!-- Filters -->
     <script src="js/filters/dish.filter.js"></script>
