--- a/www/index.html
+++ b/www/index.html
@@ -28,11 +28,10 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <script src="scordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/gcm.js"></script>
     <!--script src="templates/templates.js"></script-->
     <script src="js/config.js"></script>
 
