--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="">
-    <title>Restaurant App</title>
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self'  http://*.googleapis.com
+     https://*.googleapis.com http://*.gstatic.com https://*.gstatic.com
+    'unsafe-inline'; script-src 'self'  http://*.googleapis.com
+    https://*.googleapis.com http://*.gstatic.com https://*.gstatic.com 'unsafe-inline' 'unsafe-eval'">    <title>Restaurant App</title>
 
 
     <!-- compiled css output -->
@@ -28,7 +30,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="scordova.js"></script>
+    <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
