--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self'  http://*.googleapis.com
-     https://*.googleapis.com http://*.gstatic.com https://*.gstatic.com
-    'unsafe-inline'; script-src 'self'  http://*.googleapis.com
-    https://*.googleapis.com http://*.gstatic.com https://*.gstatic.com 'unsafe-inline' 'unsafe-eval'">    <title>Restaurant App</title>
+<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
+<title>Restaurant App</title>
 
 
     <!-- compiled css output -->
@@ -25,8 +24,7 @@
 
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
 
-    <script src="lib/cordova-airbop-client/airbop-client.min.js"></script>
-    <script src="lib/tiny-sha256/sha256.min.js"></script>
+    <script src="FCMPlugin.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
