--- a/www/index.html
+++ b/www/index.html
@@ -13,6 +13,7 @@
     <link href="lib/ionic-datepicker/dist/style.css" rel="stylesheet">
     <link href="iconic/style.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+      <link href="css/animate.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -26,7 +27,7 @@
     
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+    <script src="scordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
