--- a/www/index.html
+++ b/www/index.html
@@ -61,6 +61,7 @@
     <script src="js/controllers/estabelecimento.controller.js"></script>
     <script src="js/controllers/addUser.controller.js"></script>
     <script src="js/controllers/userpage.controller.js"></script>
+    <script src="js/controllers/register.controller.js"></script>
     <script src="js/controllers/dish-items.controller.js"></script>
     <script src="js/controllers/pedidos.controller.js"></script>
     <script src="js/controllers/dish-details.controller.js"></script>
