--- a/www/index.html
+++ b/www/index.html
@@ -20,18 +20,20 @@
     <script src="lib/angular-filter/dist/angular-filter.js"></script>
     <script src="lib/moment/moment.js"></script>
     <script src="lib/angular-moment/angular-moment.js"></script>
+    <script src="lib/angular-cache/angular-cache.min.js"></script>
     <script src="lib/ionic-datepicker/dist/templates.js"></script>
+
     <script src="lib/ionic-datepicker/dist/ionic-datepicker.js"></script>
-    <!--    <script src="js/services/distance.service.js"></script>
+    <script src="lib/angular-underscore.min.js"></script>
 
     <script src="lib/geolib/dist/geolib.js"></script>
-    <script src="lib/conversion.js/conversion.js"></script> -->
+    <script src="lib/conversion.js/conversion.js"></script>
 
     <script src="lib/ionic-timepicker/dist/ionic-timepicker.bundle.min.js"></script>
-    
+   
     <!-- cordova script (this will be a 404 during development) -->
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-    <script src="cordova.js"></script>
+     <!-- <script src="cordova.js"></script>-->
     
 
     <!-- your app's js -->
@@ -40,6 +42,8 @@
     <script src="js/config.js"></script>
 
     <!-- services -->
+        <script src="js/services/distance.service.js"></script>
+
     <script src="js/services/data.service.js"></script>
 
 
@@ -67,6 +71,7 @@
     <script src="js/controllers/dish-details.controller.js"></script>
     <script src="js/controllers/contact.controller.js"></script>
     <script src="js/controllers/offers.controller.js"></script>
+    <script src="js/controllers/pagamento.controller.js"></script>
     <script src="js/controllers/booktable.controller.js"></script>
     <script src="js/controllers/offers-details.controller.js"></script>
     <script src="js/controllers/cart.controller.js"></script>
@@ -75,10 +80,13 @@
     <script src="js/controllers/checkout.controller.js"></script>
     <script src="js/controllers/packages.controller.js"></script>
     <script src="js/controllers/package.controller.js"></script>
+     <script src="js/controllers/pedidorealizado.controller.js"></script>
     <script src="js/controllers/walkthrough.controller.js"></script>
     <script src="js/controllers/ad.controller.js"></script>
     <!--script src="js/controllers/barcode.controller.js"></script-->
     <script src="js/factory/cart.factory.js"></script>
+    <script src="js/factory/user.factory.js"></script>
+    <script src="js/factory/cache.factory.js"></script>
     <!-- Filters -->
     <script src="js/filters/dish.filter.js"></script>
 
